--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "styled-components": "^6.0.7"
   },
   "devDependencies": {
+    "@hookform/devtools": "^4.3.1",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@vitejs/plugin-react": "^4.0.1",
